<resources>
    <string name="app_name">Mess Management System</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_address">Enter address</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="title_activity_update_profile">Profile</string>
    <string name="enter_area_name">Enter area name</string>
    <string name="distance">Distance (in meter)</string>
    <string name="type">Type</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="price">Price (In Rs)</string>
    <string name="search">Search</string>
    <string name="mix">Mix</string>
    <string name="mess_only">Mess only</string>
    <string name="home_delivery">Home delivery</string>
    <string name="title_activity_mess_details_activty">About Mess</string>

    <string name="rate_mess">Rate Mess</string>
    <string name="subscribe">Subscribe</string>
    <string name="rate">Rate</string>
    <string name="enter_comment">Enter comment</string>
    <string name="today_s_menu">Today\'s menu</string>
    <string name="ok">Go back</string>
    <string name="enter_otp">Enter otp</string>
</resources>
