<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_dashboard"
        tools:context=".DashboardActivity">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:id="@+id/tilLocalName"
                                                   android:layout_height="wrap_content" android:layout_marginLeft="16dp"
                                                   android:layout_marginRight="16dp" android:layout_marginTop="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_area_name"
                                                         android:id="@+id/txtLocalName"/>


    </android.support.design.widget.TextInputLayout>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/distance"
              android:layout_marginLeft="16dp"
              android:textColor="@color/colorAccent" android:id="@+id/lblL"
              android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>


    <SeekBar android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/skDistance"
             android:layout_marginLeft="16dp"
             android:progress="100"
             android:max="5000"
             android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/type"
              android:layout_marginLeft="16dp"
              android:textColor="@color/colorAccent"
              android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:weightSum="90" android:orientation="horizontal" android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp" android:layout_marginTop="16dp">


        <CheckBox android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="30"
                  android:text="@string/veg" android:id="@+id/chkVeg"/>


        <CheckBox android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="30"
                  android:text="@string/non_veg" android:id="@+id/chkNonVeg"/>


        <CheckBox android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="30"
                  android:text="@string/mix" android:id="@+id/chkMix"/>


    </LinearLayout>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/type"
              android:layout_marginLeft="16dp"
              android:textColor="@color/colorAccent"
              android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:weightSum="60" android:orientation="horizontal" android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp" android:layout_marginTop="16dp">


        <CheckBox android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="30"
                  android:text="@string/home_delivery" android:id="@+id/chkHomeDelivery"/>


        <CheckBox android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="30"
                  android:text="@string/mess_only" android:id="@+id/chkMessOnly"/>


    </LinearLayout>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/price"
              android:layout_marginLeft="16dp"
              android:id="@+id/lblPrie"
              android:textColor="@color/colorAccent"
              android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>


    <SeekBar android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/skPrice"
             android:layout_marginLeft="16dp"
             android:progress="10"
             android:max="500"
             android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>


    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" android:id="@+id/btnSearch" android:text="@string/search"/>


</LinearLayout>