<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"

            android:layout_height="match_parent" tools:context=".UpdateProfileActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout android:id="@+id/tilName" android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintTop_toTopOf="parent"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtName"
                                                             android:hint="@string/enter_name"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       app:layout_constraintTop_toBottomOf="@id/tilName"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/tilUserName"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">


            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtUserName"
                                                             android:hint="@string/enter_username"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       app:layout_constraintTop_toBottomOf="@id/tilUserName"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/tilPassword"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">


            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtPassword"
                                                             android:inputType="textPassword"
                                                             android:hint="@string/enter_password"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       app:layout_constraintTop_toBottomOf="@id/tilPassword"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/tilConfirmPassword"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">


            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtConfirmPassword"
                                                             android:inputType="textPassword"
                                                             android:hint="@string/confirm_password"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/tilNumber"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">


            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtNumber"
                                                             android:maxEms="10"
                                                             android:inputType="number"
                                                             android:hint="@string/enter_number"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       app:layout_constraintTop_toBottomOf="@id/tilNumber"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/tilLocalAddress"
                                                       android:layout_marginTop="24dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="16dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="16dp">


            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/txtLocalAddress"
                                                             android:maxEms="10"
                                                             android:maxLines="5"
                                                             android:lines="1"
                                                             android:inputType="textMultiLine"
                                                             android:hint="@string/enter_address"/>


        </android.support.design.widget.TextInputLayout>


        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tilLocalAddress" android:text="@string/update"
                android:id="@+id/btnSignUp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                android:layout_marginStart="16dp" android:layout_marginTop="24dp" android:layout_marginEnd="8dp"/>

        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tilLocalAddress" android:text="@string/cancel"
                android:id="@+id/btnCancel" app:layout_constraintStart_toEndOf="@+id/btnSignUp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp" android:layout_marginStart="8dp" android:layout_marginEnd="16dp"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>